apps/uptime-kuma/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 3001
          protocol: TCP
